# PulsoCorp

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  Anforderungen.md  README.md  plan-umsetzung.md
backend/: .env.example  AGENTS.md  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/agents/: __init__.py  base.py  context.py  registry.py
backend/app/api/: deps.py
backend/app/core/: config.py  crypto.py  logging.py  middleware.py  rate_limit.py  security.py  time.py
backend/app/db/: base.py
backend/app/models/: ai_run.py  job_source.py  run_log.py  settings.py  stock.py  user.py
backend/app/schemas/: ai.py  auth.py  job_source.py  run_log.py  settings.py  stock.py  tag.py
backend/app/seed/: job_sources.seed.json  stocks.seed.json
backend/app/services/: ai_run_lookup.py  ai_run_service.py  ai_service.py  cron_scheduler.py  history_service.py  job_history_io.py  jobs_service.py  jobs_trend_service.py  lock_manager.py  market_service.py  provider_factory.py  refresh_lock.py  refresh_runner.py  refresh_worker.py  run_pipeline.py  run_status_service.py  scheduler_service.py  seed_service.py  stock_service.py  valuation_service.py
backend/companytracker_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/migrations/: env.py
backend/scripts/: generate_seed_from_csv.py  import_job_counter_history.py  import_job_counter_yaml.py  inspect_comp_list.py
backend/tests/: conftest.py  test_agents_fisher.py  test_agents_redflag.py  test_agents_scenario.py  test_agents_tournament.py  test_ai_router.py  test_ai_run_lookup.py  test_ai_service.py  test_ai_test_endpoint.py  test_auth_and_filters.py  test_auth_security.py  test_crypto.py  test_health.py  test_job_adapters.py  test_job_history_io.py  test_jobs_api.py  test_jobs_service.py  test_login_rate_limit.py  test_playwright_adapters.py  test_providers.py  test_refresh_cancel.py  test_refresh_weekend_skip.py  test_request_id_middleware.py  test_scheduler_lock.py  test_seed_export.py  test_settings_api.py  test_single_refresh_endpoint.py  test_stock_cascade.py  test_stock_serialization_queries.py  test_stock_url_validation.py  test_stocks_sectors.py  test_yfinance_balance_sheet.py
(+212 files in other folders)
